<resources>
    <string name="app_name">Calculator</string>
    <string name="simple">Simple</string>
    <string name="advanced">Advanced</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="c">C</string>
    <string name="bksp">Bksp</string>
    <string name="sign">±</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="sqrt">sqrt</string>
    <string name="squared">x^2</string>
    <string name="power">x^y</string>
    <string name="log">log</string>
    <string name="version">v1.0.0</string>
    <string name="copyright">© Beny 2017</string>
    <string-array name="digits">
        <item>@string/zero</item>
        <item>@string/one</item>
        <item>@string/two</item>
        <item>@string/three</item>
        <item>@string/four</item>
        <item>@string/five</item>
        <item>@string/six</item>
        <item>@string/seven</item>
        <item>@string/eight</item>
        <item>@string/nine</item>
    </string-array>
    <string-array name="signs">
        <item>@string/plus</item>
        <item>@string/minus</item>
        <item>@string/division</item>
        <item>@string/multiplication</item>
    </string-array>
    <string name="title_activity_advanced">AdvancedActivity</string>
    <string name="title_activity_about">AboutActivity</string>
</resources>
